    (user-invisible) bitrotted stuff. (E.g. *!INITIAL-FDEFN-OBJECTS*
    is no longer a static symbol.)

changes in sbcl-0.7.7 relative to sbcl-0.7.6:
  * An alpha-quality port to the parisc architecture running Linux,
    based on the old CMUCL backend has been made.  This, even more so
    than the other backends, should be considered still a work in
    progress.
  * fixed bug 189: The compiler now respects NOTINLINE declarations for
    functions declared in FLET and LABELS. (I.e. "LET conversion" is
    suppressed.) Also now that the compiler is looking at declarations
    in the environment, it checks optimization declarations as well,
    and suppresses inlining when (> DEBUG SPEED).
  * More fixes have been made to treatment of floating point exception
    treatment and other Unix signals.  In particular, floating point
    exceptions no longer cause Bus errors on the SPARC/Linux platform.
  * The detection and handling of control stack exhaustion (infinite
    or very deeply nested recursion) has changed.  Stack exhaustion
    detection is now done by write-protecting pages at the OS level
    and applies at all optimization settings; when found, a
    SB-KERNEL:CONTROL-STACK-EXHAUSTED condition (subclass of
    STORAGE-CONDITION) is signalled, so stack exhaustion can no longer
    be caught using IGNORE-ERRORS.
  * Bug 48a./b. fixed: SYMBOL-MACROLET now refuses to bind symbols
    that are names of constants or global variables.
  * Bug fix: DEFINE-ALIEN-ROUTINE now declaims the correct FTYPE for
    alien routines with docstrings.
  * Bug 184 fixed: Division of ratios by the integer 0 now signals an
    error of type DIVISION-BY-ZERO. (thanks to Wolfhard Buss and
    Raymond Toy)
  * Bug fix: Errors in PARSE-INTEGER are now of type PARSE-ERROR.
    (thanks to Eric Marsden)
  * Bug fix: COERCE to (COMPLEX FLOAT) of rationals now returns an
    object of type (COMPLEX FLOAT). (thanks to Wolfhard Buss)